<resources>
    <string name="app_name">Healthy Side</string>
    <string name="forget_password_submit_button">Submit</string>
    <string name="registered_email_forget_password">Registered Email</string>
    <string name="e_mail_login">E-mail</string>
    <string name="password_login">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password_textView">Forgot Password</string>
    <string name="not_a_user_sign_up_textView">  SIGN UP  </string>
    <string name="email_signUp">Email</string>
    <string name="confirm_password_SignUp">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="fitness_img">Fitness</string>
    <string name="diagnosis_img">Diagnosis</string>
    <string name="diet_img">Diet</string>
    <string name="sign_out">Sign Out</string>
    <string name="fitness">Fitness</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="diet">Diet</string>
    <string name="core_abs">Core Abs</string>
    <string name="lats">Lats</string>
    <string name="bicep">Bicep</string>
    <string name="tricep">Tricep</string>
    <string name="enter_password_signUp">Enter Password</string>
    <string name="submit_diagnosis">Submit</string>
    <string name="body_pains">Body Pains</string>
    <string name="head_ache">Head Ache</string>
    <string name="trouble_walking">Trouble Walking</string>
    <string name="pain_in_upper_abdomen_throat">Pain in upper abdomen,throat</string>
    <string name="weakness_and_dumbness_in_arms_legs">Weakness and dumbness in arms,legs</string>
    <string name="fever">Fever</string>
    <string name="nasal_congestion">Nasal Congestion</string>
    <string name="breathing_problems">Breathing Problems</string>
    <string name="enter_the_height_in_cms">Enter the Height in cms</string>
    <string name="enter_the_weight_in_kgs">Enter the Weight in Kgs</string>
    <string name="get_bmi_button">Get BMI</string>
    <string name="bmi_chart">BMI Chart</string>
    <string name="settings">Settings</string>
    <string name="healthy_side_login_heading">Healthy Side</string>
    <string name="welcome_to_login_heading">Welcome To</string>
    <string name="dev_email"><a href="mailto:sandeepprabhakula10@gmail.com">sandeepprabhakula@gmail.com</a></string>
    <string name="for_any_issues_or_bugs_settings">For any issues or Bugs</string>
    <string name="email_to_settings">Email to</string>
    <string name="setting_name">Setting Name</string>
    <string name="setting_img">Setting Image</string>
    <string name="login_textView">  LOGIN  </string>
    <string name="active">________</string>
    <string name="active_signup">________</string>
    <string name="sign_up_sign_up_activity">SIGN UP</string>
    <string name="login_sign_up_activity">LOGIN</string>
    <string name="get_code_phone_auth">Get Code</string>
    <string name="mobile_number_phone_auth">Mobile Number</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">verify</string>
    <string name="active_phone_auth">________</string>
    <string name="phone_auth">PHONE</string>
    <string name="email_auth">EMAIL</string>
    <string name="phone_auth_login_activity">PHONE</string>
    <string name="email_auth_login_activity">EMAIL</string>
    <string name="active_auth_login_activity">________</string>
    <string name="feature_image_recycler_view">Feature Image</string>
    <string name="exercise_img">Exercise Image</string>
    <string name="title_activity_maps">Hospitals nearby</string>
    <string name="username">UserName</string>
    <string name="authentication_failed_try_again_to_continue_using_healthyside">Authentication Failed. Try again to continue using HealthySide</string>
    <string name="try_again">Try Again</string>
</resources>